--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dosy"
   ],
   "author": "dosy",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
     "electron": "~1.6.2"
   },
