--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/dosy-corp/pa-os-desktopclient#readme",
   "dependencies": {
+    "dosycanvasdomtracker": "^1.0.2",
     "dosyhil": "^1.0.2",
     "dosylook": "^1.0.4",
     "npm-watch": "^0.2.0"
