--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "start": "electron .",
+    "start": "electron --debug=5858 .",
     "watch": "npm-watch"
   },
   "repository": {
