Added some CSS to tidy the build and search panel tabs
Also put the submit buttons inline with the text inputs

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "dosy",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "electron": "^1.6.2"
   },
   "bugs": {
     "url": "https://github.com/dosy-corp/pa-os-desktopclient/issues"
