--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "dosycanvasdomtracker": "^1.0.2",
     "dosyhil": "^1.0.2",
+    "dosylogo": "^1.0.2",
     "dosylook": "^1.0.4",
     "npm-watch": "^0.2.0",
     "selector-generalization": "^1.0.1"
