--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "dosy",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^1.6.2"
+    "electron": "^1.8.0"
   },
   "bugs": {
     "url": "https://github.com/dosy-corp/pa-os-desktopclient/issues"
@@ -40,6 +40,7 @@
     "dosylogo": "^1.0.2",
     "dosylook": "^1.0.4",
     "npm-watch": "^0.2.0",
-    "selector-generalization": "^1.0.1"
+    "request-promise": "^4.2.1",
+    "selector-generalization": "^1.0.9"
   }
 }
